java package explore (`jar tf `to explore jar) without ClassGraph installed